--- a/index.html
+++ b/index.html
@@ -53,6 +53,44 @@
 				background-color: #4f4f4f;
 			}
 			</style>
+			<style>
+			#nav {
+				background: #fff;
+				padding: 1em 0;
+				text-align: center;
+				border-bottom: 1px solid #e6e6e6;
+			}
+
+			#nav ul {
+				list-style: none;
+				margin: 0;
+				padding: 0;
+			}
+
+			#nav ul li {
+				display: inline-block;
+				margin: 0 1em;
+			}
+
+			#nav ul li a {
+				color: #3c3b3b;
+				text-decoration: none;
+				font-size: 1.1em;
+				transition: color 0.2s;
+			}
+
+			#nav ul li a:hover {
+				color: #4f4f4f;
+			}
+			</style>
+			<nav id="nav">
+				<ul>
+					<li><a href="#accueil">Accueil</a></li>
+					<li><a href="#projet">Projet</a></li>
+					<li><a href="#competences">Compétences</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
 
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
